added some improvements in headJumbotron and andded footJumbotron

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="#education">Education</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#certificates">Certification</a>
+                    <a class="nav-link" href="#certificates">Certifications</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#showCase">Projects</a>
@@ -69,11 +69,10 @@
                 <h2>About Me</h2>
                 <p>
                     Highly motivated professional with 8+ years of digital finance, product sales management, and
-                    customer
-                    service experience. Transitioning to Software Engineering with over 500+ training hours and
-                    experience in
-                    Web Development. Seeking a career that will allow me the opportunity to excel as a Front-end Web or
-                    Software Developer as well as highlight my previous experience and leadership abilities.
+                    customer service experience. Transitioning to Software Engineering with over 500+ training hours and
+                    experience in Web Development. Seeking a career that will allow me the opportunity to excel as a Web
+                    Developer as well as highlight my previous experience, positive and winning attitude, strong work
+                    ethic and leadership abilities.
 
                 </p>
             </div>
@@ -81,7 +80,9 @@
 
         <div class="container" id="showCase">
             <div class="row justify-content-center">
-                <div class="col-sm-12 col-md-6">
+                <div class="col-sm-12 col-md-5">
+                    <h2>Projects</h2>
+                    <br>
                     <div id="projectsShow" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
                             <li data-target="#projectsShow" data-slide-to="0" class="active"></li>
@@ -123,34 +124,39 @@
                         </button>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 align-self-center">
+                <div class="col-sm-12 col-md-7 align-self-center">
                     <div id="workHistory">
                         <h2>Experience</h2>
                         <br>
                         <h4>Jr. Web Developer Trainee</h4>
                         <h5>Generation USA</h5>
-                        <h6>• Participating in an 11-week Junior Web Developer program to grasp my hard skills</h6>
-                        <h6>• Expanding an experience in Web Development, scripting and creating portfolio</h6>
-                        <h6>• Collaboratively working in a team projects and challenges</h6>
+                        <h6>• Proactively learning new technical and non-technical skills in order to improve
+                            performance </h6>
+                        <h6>• Effectively communicating and collaborating with peers and other stakeholders using a
+                            variety of platforms such as Zoom, Slack, Replit and LinkedIn</h6>
+                        <h6>• Expanding an experience in Web Development, scripting and creating portfolio </h6>
                         <br>
                         <h4>Senior Product Manager and Business Trainer</h4>
                         <h5>Altyn Bank SB JSC (Halyk Bank JSC)</h5>
                         <h6>• Developed and engaged in launching 1st digital bank in Kazakhstan as well as products such
-                            as
-                            credit
-                            cards, loans, deposits</h6>
+                            as credit cards, loans, deposits</h6>
+                        <h6>• Participated on daily meetings with IT and Development teams using platforms such as
+                            Hub and Colvir</h6>
+                        <h6> • Created study materials and webinars using bank systems: Colvir, CRM and OpenWay
+                        </h6>
                         <br>
                         <h4>Deputy Branch Manager</h4>
                         <h5>HSBC / Altyn Bank SB JSC (Halyk Bank JSC)</h5>
                         <h6>• Supervised and managed the work of 20 employees in multiple branches</h6>
                         <h6>• Supported Branch Manager in the delivery of customer driven service and sales</h6>
-                        <h6>• Collaboratively working in a team projects and challenges</h6>
+                        <h6>• Trained Branch employees using webinars, Excel, Power Point presentations and demo systems
+                        </h6>
                         <br>
                         <h4>Branch Wealth Management Relationship Manager</h4>
                         <h5>RBS (The Royal Bank of Scotland) / HSBC</h5>
                         <h6>• Enhanced Branch performance appraisals by achieving monthly targets by 100%</h6>
                         <h6>• Improved the Department sales performance by 30%</h6>
-                        <h6>• Best branch awards, «Top Performer in Sales and Platinum expert 2009-2011»</h6>
+                        <h6>• Achieved Best branch award «Top Performer in Sales and Platinum expert 2009-2011»</h6>
                         <br>
                     </div>
                 </div>
@@ -161,7 +167,7 @@
         <div class="container" id="educ">
             <div class="row justify-content-center">
 
-                <div class="col-sm-12 col-md-6 align-self-center">
+                <div class="col-sm-12 col-md-5 align-self-center">
                     <div id="education">
                         <h2>Education</h2>
                         <br>
@@ -180,8 +186,11 @@
 
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6">
+                <div class="col-sm-12 col-md-7 align-self-center">
+
                     <div id="certificates" class="carousel slide" data-touch="false" data-interval="false">
+                        <h2>Certifications</h2>
+                        <br>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img src="images/Python PCEP.png" class="d-block w-100" alt="...">
@@ -252,6 +261,20 @@
                 </div>
 
 
+            </div>
+
+            <div class="container" id="footJumbo">
+                <div class="jumbotron text-center">
+                    <div class="row">
+                        <div class="col-sm-12 align-self-center">
+                            <h2>What can I bring to your team?</h2>
+                            <h4>I can bring my uniqueness and passion to learn, my creativity and positive attitude, my
+                                ability to think out-of-the-box and diversity</h4>
+                        </div>
+
+                    </div>
+
+                </div>
             </div>
 
             <footer>
